feat:修复向量库应用服务;修solstone;修计费服务